--- a/index.html
+++ b/index.html
@@ -1,12 +1,269 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Техномарт</title>
+</head>
+<body>
+	<header>
+		<div class="header-user-block">
+			<div class="container">
+				<a class="logo" href="#">Техномарт</a>
+				<input type="search" name="search" id="search" value="Поиск"><span></span>
+				<a class="bookmarks" href="#">Закладки: <span>0</span></a>
+				<a class="cart" href="#">Корзина: <span>0</span></a>
+				<a class="order" href="#">Оформить заказ</a>
+			</div>
+		</div>
+		<div>
+			<div class="header-main">
+				<div class="container">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
+					<div class="header-contacts-login">
+						<h2>Интернет-магазин строительных материалов и инструментов для ремонта</h2>
+						<div class="header-contacts">
+							<p>+7 (812) 555-05-55</p>
+							<p>г.Санкт-Петербург,ул.Б.Конюшенная,д19/8
+							</p>
+						</div>
+						<div class="login">
+							<a href="#">Войти</a>
+							<a href="#">Регистрация</a>
+						</div>
+					</div>
 
-  </body>
-</html>
+					<nav class="header-navigation">
+						<ul>
+							<li class="header-nav"><a href="#">Главная</a></li>
+							<li class="header-nav">><a href="#">Компания</a></li>
+							<li class="header-nav">><a href="#">Каталог</a></li>
+							<li class="header-nav">><a href="#">Новости</a></li>
+							<li class="header-nav">><a href="#">Спецпредложения</a></li>
+							<li class="header-nav">><a href="#">Доставка</a></li>
+							<li class="header-nav">><a href="#">Контакты</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<div class="promo-content">
+			<div class="container">
+				<div class="promo-block">
+					<div class="flag-new">
+						<p>Материалы</p>
+						<a href="#">На любой вкус</a>
+					</div>
+					<div>
+						<p>Инструмент</p>
+						<a href="#">На все случаи</a>
+					</div>
+					<div>
+						<p>Техника</p>
+						<a href="#">Для стройки</a>
+					</div>
+				</div>
+				<div class="promo-slider-block">
+
+					<div class="slider-wrap">
+
+						<div class="slider">
+							<div class="slide">
+								<p>Перфораторы</p>
+								<p>Настоящие мужские игрушки</p>
+								<a class="btn-red" href="#">Открыть каталог</a>
+								<img class="background" src="#" alt="">
+							</div>
+						</div>
+					</div>
+
+					<div class="features">
+						<div>
+							<p>Скидки 50%</p>
+							<a href="#">На 350 товаров</a>
+						</div>
+						<div>
+							<p>Доставка</p>
+							<a href="#">Бесплатно</a>
+						</div>
+					</div>
+
+				</div>
+				<section>
+					<p>
+						<span>Популярные товары:</span>
+						<a class="btn-red" href="#">Все популярные товары</a>
+					</p>
+
+					<div class="catalog-items">
+						<div class="catalog-item">
+							<img src="#" alt="">
+							<p>Перфоратор BOSCH BFG 9000</p>
+							<p>32 500 р.</p>
+							<a class="btn-red" href="#">25 500 р.</a>
+							<div class="buy-item">
+								<a href="#">Купить</a>
+								<a href="#">В закладки</a>
+							</div>
+						</div>
+
+						<div class="catalog-item">
+							<img src="#" alt="">
+							<p>Перфоратор BOSCH BFG 3000</p>
+							<p>22 500 р.</p>
+							<a class="btn-red" href="#">15 500 р.</a>
+							<div class="buy-item">
+								<a href="#">Купить</a>
+								<a href="#">В закладки</a>
+							</div>
+						</div>
+
+						<div class="catalog-item">
+							<img src="#" alt="">
+							<p>Перфоратор BOSCH BFG 6000</p>
+							<p>30 500 р.</p>
+							<a class="btn-red" href="#">25 500 р.</a>
+							<div class="buy-item">
+								<a href="#">Купить</a>
+								<a href="#">В закладки</a>
+							</div>
+						</div>
+
+						<div class="catalog-item flag-new no-discount">
+							<img src="#" alt="">
+							<p>Перфоратор BOSCH BFG 2000</p>
+							<a class="btn-red" href="#">12 500 р.</a>
+							<div class="buy-item">
+								<a href="#">Купить</a>
+								<a href="#">В закладки</a>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section>
+					<p>
+						<span>Популярные производители:</span>
+						<a class="btn-red" href="#">Все производители</a>
+					</p>
+
+					<div class="brands">
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+						<a href="#">
+							<img src="#" alt="">
+						</a>
+					</div>
+				</section>
+				<div class="services">
+					<div class="container">
+						<h3>Сервисы</h3>
+						<p class="description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+
+						<div class="services-slider">
+							<input type="radio" id="delivery-btn" name="toggle" checked>
+							<input type="radio" id="guaranty-btn" name="toggle">
+							<input type="radio" id="credit-btn" name="toggle">
+							<div class="services-slider-controls">
+								<label for="delivery-btn">Доставка</label>
+								<label for="guaranty-btn">Гарантия</label>
+								<label for="credit-btn">Кредит</label>
+							</div>
+							<div class="services-slides">
+								<div class="services-slide">
+									<p class="title">Доставка</p>
+									<p class="details">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="about-us">
+					<div class="container">
+						<section class="about-company">
+							<h1>Компания &laquo;Техномарт&raquo;</h1>
+							<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+							<p>Мы можем доставить наш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+							<ul>
+								<li>Деловые линии</li>
+								<li>Автотрейдинг</li>
+								<li>ЖелДорЭкспедиция</li>
+							</ul>
+							<a class="btn-red" href="#">Подробнее о компании</a>
+						</section>
+						<aside class="contacts">
+							<h3>Контакты</h3>
+							<p>Вы можете забрать товар сами, заехав в наш офис:</p>
+							<div class="map-wrapper" id="map-canvas"></div>
+							<a class="btn-red open-modal-window" href="#">Заблудились? Напишите нам!</a>
+						</aside>
+					</div>
+				</div>
+				<footer>
+					<div class="footer-contacts-navigation clearfix">
+						<div class="container">
+							<div class="footer-contacts">
+								<a class="logo" href="#">Техномарт</a>
+								<address>
+									г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
+									+7 (812) 555-05-55
+								</address>
+							</div>
+							<div class="footer-navigation">
+								<ul class="footer-nav-1">
+									<li><a href="#">Компания</a></li>
+									<li><a href="#">Новости</a></li>
+									<li><a href="#">Каталог</a></li>
+									<li><a href="#">Доставка</a></li>
+									<li><a href="#">Контакты</a></li>
+								</ul>
+								<ul class="footer-nav-2">
+									<li><a href="#">Материалы</a></li>
+									<li><a href="#">Техника</a></li>
+									<li><a href="#">Инструмент</a></li>
+									<li><a href="#">Спецпредложения</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="footer-socials">
+						<div class="container">
+							<p class="copyright">
+								2010-2016 Компания "Техномарт"<br>
+								Все права защищены
+							</p>
+							<div class="social-btns">
+								<a class="vk-btn" href="#">vk</a>
+								<a class="fb-btn" href="#">fb</a>
+								<a class="ig-btn" href="#">ig</a>
+							</div>
+							<p class="footer-feedback">
+								Обратная связь:<br>
+								<a href="#">mail@htmlacademy.ru</a>
+							</p>
+							<p>Разработано:</p>
+							<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+						</p>
+					</div>
+				</div>
+			</footer>
+		</body>
+		</html>
+		
