--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 					</nav>
 				</div>
 			</div>
+			</div>
 		</header>
 		<div class="promo-content">
 			<div class="container">
@@ -161,6 +162,8 @@
 						</a>
 					</div>
 				</section>
+				</div>
+				</div>
 				<div class="services">
 					<div class="container">
 						<h3>Сервисы</h3>
@@ -247,8 +250,7 @@
 								<a href="#">mail@htmlacademy.ru</a>
 							</p>
 							<p>Разработано:</p>
-							<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-						</p>
+							<a class="btn" href="https://htmlacademy.ru">HTML Academy></a>
 					</div>
 				</div>					
 			</footer>
