:heavy_check_mark: Сборка #4

--- a/4/index.html
+++ b/4/index.html
@@ -44,6 +44,7 @@
 					</nav>
 				</div>
 			</div>
+			</div>
 		</header>
 		<div class="promo-content">
 			<div class="container">
@@ -162,6 +163,8 @@
 						</a>
 					</div>
 				</section>
+				</div>
+				</div>
 				<div class="services">
 					<div class="container">
 						<h3>Сервисы</h3>
@@ -248,8 +251,7 @@
 								<a href="#">mail@htmlacademy.ru</a>
 							</p>
 							<p>Разработано:</p>
-							<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-						</p>
+							<a class="btn" href="https://htmlacademy.ru">HTML Academy></a>
 					</div>
 				</div>					
 			</footer>
