--- a/4/shop.html
+++ b/4/shop.html
@@ -13,7 +13,6 @@
 				<a class="order" href="#">Оформить заказ</a>
 			</div>
 		</div>
-		<div>
 			<div class="header-main">
 				<div class="container">
 					<div class="header-contacts-login">
@@ -221,6 +220,8 @@
 							<a class="page-btn page-btn-next" href="#">Следующая</a>
 						</div>
 					</div>
+				</div>
+				</div>
 				</div>
 				<footer>
 					<div class="footer-contacts-navigation clearfix">
