--- a/shop.html
+++ b/shop.html
@@ -123,7 +123,7 @@
 						</div>
 						<div class="catalog-items">
 							<div class="catalog-item">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="#">
 								<p>Перфоратор BOSCH BFG 9000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -133,7 +133,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-2.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -143,7 +143,7 @@
 								</div>
 							</div>
 							<div class="catalog-item flag-new no-discount">
-								<img src="img/drill-3.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -153,7 +153,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -163,7 +163,7 @@
 								</div>
 							</div>
 							<div class="catalog-item flag-new no-discount">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 9000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -173,7 +173,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-2.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -183,7 +183,7 @@
 								</div>
 							</div>
 							<div class="catalog-item flag-new no-discount">
-								<img src="img/drill-3.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -193,7 +193,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -203,7 +203,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-3.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
