--- a/shop.html
+++ b/shop.html
@@ -75,7 +75,7 @@
 									<p><input class="min-price" type="text" id="min-price" value="0"><span></span><input class="max-price" type="text" id="max-price" value="30 000"></p>
 								</div>
 							</div>
-							<div class="main-brands">
+							<fieldset class="main-brands">
 								<h2>Производители:</h2>
 								<p>
 									<input type="checkbox" name="brand-bosch" id="brand-bosch" checked>
@@ -97,14 +97,14 @@
 									<input type="checkbox" name="brand-hitachi" id="brand-hitachi">
 									<label for="brand-hitachi">Hitachi</label>
 								</p>
-							</div>
-							<div class="power-supply-type">
+							</fieldset>
+							<fieldset class="power-supply-type">
 								<h2>Питание:</h2>
 								<input type="radio" name="power-supply-type" id="battery-supply" checked>
 								<label for="battery-supply">Аккумуляторные</label>
 								<input type="radio" name="power-supply-type" id="mains-supply">
 								<label for="mains-supply">Сетевые</label>
-							</div>
+							</fieldset>
 							<input class="form-btn" type="submit" id="form-btn" name="form-btn" value="Показать">
 						</form>
 					</div>
