:heavy_check_mark: Сборка #4

--- a/4/shop.html
+++ b/4/shop.html
@@ -75,7 +75,7 @@
 									<p><input class="min-price" type="text" id="min-price" value="0"><span></span><input class="max-price" type="text" id="max-price" value="30 000"></p>
 								</div>
 							</div>
-							<div class="main-brands">
+							<fieldset class="main-brands">
 								<h2>Производители:</h2>
 								<p>
 									<input type="checkbox" name="brand-bosch" id="brand-bosch" checked>
@@ -97,14 +97,14 @@
 									<input type="checkbox" name="brand-hitachi" id="brand-hitachi">
 									<label for="brand-hitachi">Hitachi</label>
 								</p>
-							</div>
-							<div class="power-supply-type">
+							</fieldset>
+							<fieldset class="power-supply-type">
 								<h2>Питание:</h2>
 								<input type="radio" name="power-supply-type" id="battery-supply" checked>
 								<label for="battery-supply">Аккумуляторные</label>
 								<input type="radio" name="power-supply-type" id="mains-supply">
 								<label for="mains-supply">Сетевые</label>
-							</div>
+							</fieldset>
 							<input class="form-btn" type="submit" id="form-btn" name="form-btn" value="Показать">
 						</form>
 					</div>
@@ -123,7 +123,7 @@
 						</div>
 						<div class="catalog-items">
 							<div class="catalog-item">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="#">
 								<p>Перфоратор BOSCH BFG 9000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -133,7 +133,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-2.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -143,7 +143,7 @@
 								</div>
 							</div>
 							<div class="catalog-item flag-new no-discount">
-								<img src="img/drill-3.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -153,7 +153,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -163,7 +163,7 @@
 								</div>
 							</div>
 							<div class="catalog-item flag-new no-discount">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 9000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -173,7 +173,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-2.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -183,7 +183,7 @@
 								</div>
 							</div>
 							<div class="catalog-item flag-new no-discount">
-								<img src="img/drill-3.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -193,7 +193,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-1.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -203,7 +203,7 @@
 								</div>
 							</div>
 							<div class="catalog-item">
-								<img src="img/drill-3.jpg" width="218" height="180" alt="">
+								<img src="#" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -267,7 +267,6 @@
 							</p>
 							<p>Разработано:</p>
 							<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-						</p>
 					</div>
 				</div>
 			</footer>
