--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 				<div class="about-us">
 					<div class="container">
 						<section class="about-company">
-							<h1>Компания &laquo;Техномарт&raquo;</h1>
+							<h1>Компания Техномарт</h1>
 							<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
 							<p>Мы можем доставить наш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
 							<ul>
