--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 						<a href="#">
 							<img src="img/Makita.jpg" alt="">
 						</a>
+						<a href="">
+							<img src="img/DeWALT.jpg" alt="">
+						</a>
 						<a href="#">
 							<img src="img/Интерскол.jpg" alt="">
 						</a>
@@ -159,9 +162,6 @@
 						</a>
 						<a href="#">
 							<img src="img/AEG.jpg" alt="">
-						</a>
-						<a href="#">
-							<img src="#" alt="">
 						</a>
 						<a href="#">
 							<img src="img/Metabo.jpg" alt="">
