--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<ul>
 								<li><a href="#">Главная</a></li>
 								<li><a href="#">Компания</a></li>
-								<li><a href="#">Каталог</a></li>
+								<li><a href="shop.html">Каталог</a></li>
 								<li><a href="#">Новости</a></li>
 								<li><a href="#">Спецпредложения</a></li>
 								<li><a href="#">Доставка</a></li>
