--- a/shop.html
+++ b/shop.html
@@ -121,7 +121,7 @@
 						</div>
 						<div class="catalog">
 							<div class="item">
-								<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
+								<img src="img/bfg-3000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -131,7 +131,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<img src="img/bfg-6000.jpg" width="144" height="128" alt="">
+								<img src="img/bfg-6000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -141,7 +141,7 @@
 								</div>
 							</div>
 							<div class="item-new no-discount">
-								<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
+								<img src="img/bfg-2000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -151,7 +151,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
+								<img src="img/bfg-3000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -161,7 +161,7 @@
 								</div>
 							</div>
 							<div class="item-new no-discount">
-								<img src="img/bfg-6000.jpg" width="144" height="128" alt="">
+								<img src="img/bfg-6000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -171,7 +171,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
+								<img src="img/bfg-2000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -181,7 +181,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
+								<img src="img/bfg-3000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -191,7 +191,7 @@
 								</div>
 							</div>
 							<div class="item-new no-discount">
-								<img src="img/bfg-6000.jpg"  width="144" height="128" alt="">
+								<img src="img/bfg-6000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -201,7 +201,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
+								<img src="img/bfg-2000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
