--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 					<div class="promo-new">
 						<span class="promo-title">Материалы</span>
 						<a class="promo-btn" href="#">На любой вкус</a>
-						<img class="promo-icon" src="img/icon-bucket.png" alt="">
+						<img class="promo-icon" src="img/icon-bucket.png" width="44" height="65"alt="">
 					</div>
 					<div class="promo">
 						<span class="promo-title">Инструмент</span>
 						<a class="promo-btn" href="#">На все случаи</a>
-						<img class="promo-icon" src="img/icon-drill.png" alt="">
+						<img class="promo-icon" src="img/icon-drill.png" width="75" height="61" alt="">
 					</div>
 					<div class="promo">
 						<span class="promo-title">Техника</span>
 						<a class="promo-btn" href="#">Для стройки</a>
-						<img class="promo-icon" src="img/icon-tractor.png" alt="">
+						<img class="promo-icon" src="img/icon-tractor.png" width="78" height="62" alt="">
 					</div>
 				</div>
 				<div class="promo-block">
@@ -72,7 +72,7 @@
 								<p>Перфораторы</p>
 								<p>Настоящие мужские игрушки</p>
 								<a class="promo-btn promo-red" href="#">Открыть каталог</a>
-								<img class="background" src="img/slider-1.jpg" alt="">
+								<img class="background" src="img/slider-1.jpg" width="620" height="266" alt="">
 							</div>
 						</div>
 					</div>
@@ -80,12 +80,12 @@
 						<div>
 							<span class="promo-title">Скидки 50%</span>
 							<a class="promo-btn" href="#">На 350 товаров</a>
-							<img class="promo-icon" src="img/icon-bucket.png" alt="">
+							<img class="promo-icon" src="img/icon-bucket.png" width="44" height="65" alt="">
 						</div>
 						<div>
 							<span class="promo-title">Доставка</span>
 							<a class="promo-btn" href="#">Бесплатно</a>
-							<img class="promo-icon" src="img/icon-track.png" alt="">
+							<img class="promo-icon" src="img/icon-track.png" width="78" height="63" alt="">
 						</div>
 					</div>
 				</div>
@@ -96,7 +96,7 @@
 					</div>
 					<div class="catalog">
 						<div class="item">
-							<img src="img/bfg-9000.jpg" alt="">
+							<img src="img/bfg-9000.jpg" width="184" height="164" alt="">
 							<p>Перфоратор BOSCH BFG 9000</p>
 							<p>32 500 р.</p>
 							<a class="btn-red" href="#">25 500 р.</a>
@@ -106,7 +106,7 @@
 							</div>
 						</div>
 						<div class="item">
-							<img src="img/bfg-3000.jpg" alt="">
+							<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
 							<p>Перфоратор BOSCH BFG 3000</p>
 							<p>22 500 р.</p>
 							<a class="btn-red" href="#">15 500 р.</a>
@@ -116,7 +116,7 @@
 							</div>
 						</div>
 						<div class="item">
-							<img src="img/bfg-6000.jpg" alt="">
+							<img src="img/bfg-6000.jpg" width="144" height="128" alt="">
 							<p>Перфоратор BOSCH BFG 6000</p>
 							<p>30 500 р.</p>
 							<a class="btn-red" href="#">25 500 р.</a>
@@ -126,7 +126,7 @@
 							</div>
 						</div>
 						<div class="item-new no-discount">
-							<img src="img/bfg-2000.jpg" alt="">
+							<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
 							<p>Перфоратор BOSCH BFG 2000</p>
 							<a class="btn-red" href="#">12 500 р.</a>
 							<div class="buy-item">
@@ -143,28 +143,28 @@
 					</div>
 					<div class="brands">
 						<a href="#">
-							<img src="img/bosch.jpg" alt="">
+							<img src="img/bosch.jpg" width="220" height="145" alt="">
 						</a>
 						<a href="#">
-							<img src="img/Makita.jpg" alt="">
+							<img src="img/Makita.jpg" width="220" height="145" alt="">
 						</a>
 						<a href="">
-							<img src="img/DeWALT.jpg" alt="">
+							<img src="img/DeWALT.jpg" width="220" height="145" alt="">
 						</a>
 						<a href="#">
-							<img src="img/Интерскол.jpg" alt="">
+							<img src="img/Интерскол.jpg" width="220" height="145" alt="">
 						</a>
 						<a href="#">
-							<img src="img/Hitachi.jpg" alt="">
+							<img src="img/Hitachi.jpg" width="220" height="145" alt="">
 						</a>
 						<a href="#">
-							<img src="img/LG.jpg" alt="">
+							<img src="img/LG.jpg" width="220" height="145" alt="">
 						</a>
 						<a href="#">
-							<img src="img/AEG.jpg" alt="">
+							<img src="img/AEG.jpg" width="220" height="145" alt="">
 						</a>
 						<a href="#">
-							<img src="img/Metabo.jpg" alt="">
+							<img src="img/Metabo.jpg" width="220" height="145" alt="">
 						</a>
 					</div>
 				</section>
