--- a/shop.html
+++ b/shop.html
@@ -20,17 +20,17 @@
 			<div class="container">
 				<div class="header-contacts-login">
 					<span class="pink-text">Интернет-магазин строительных материалов и инструментов для ремонта</span>
-							<div class="header-contacts">
-								<span  class="pink-text">+7 (812) 555-05-55</span>
-								<span  class="blue-text">г.Санкт-Петербург,ул.Б.Конюшенная,д19/8</span>
+					<div class="header-contacts">
+						<span  class="pink-text">+7 (812) 555-05-55</span>
+						<span  class="blue-text">г.Санкт-Петербург,ул.Б.Конюшенная,д19/8</span>
 					</div>
 					<div class="user-block">
-					<div  class="auth-user">
+						<div  class="auth-user">
 							<a class="name" href="#">Равшан Джамшутович</a>
 							<a class="exit" href="#"></a>
-          </div>
-							<a class="blue-text "href="#">Мои заказы</a>
-							<a class="blue-text "href="#">Личный кабинет</a>         
+						</div>
+						<a class="blue-text "href="#">Мои заказы</a>
+						<a class="blue-text "href="#">Личный кабинет</a>         
 					</div>
 				</div>
 				<nav class="header-navigation">
@@ -95,193 +95,208 @@
 							</fieldset>
 							<fieldset class="filter-block">
 								<h3 class="filter-title">Питание:</h2>
-								<input type="radio" name="power-supply-type" id="battery-supply" value="" checked>
-								<label for="battery-supply">Аккумуляторные</label>
-								<input type="radio" name="power-supply-type" id="mains-supply" value="">
-								<label for="mains-supply">Сетевые</label>
-								<a class="btn-filter" href="#">Показать</a>
-							</fieldset>
-						</form>
-					</div>
-					<div class="catalog-right">
-						<div class="sort-by">
-							<div class="catalog-top">
-								<span class="catalog-title" >Сортировка:</span>
-								<a class="sort-active" href="#">По цене</a>
-								<a href="#">По типу</a>
-								<a href="#">По функционалу</a>
+									<input type="radio" name="power-supply-type" id="battery-supply" value="" checked>
+									<label for="battery-supply">Аккумуляторные</label>
+									<input type="radio" name="power-supply-type" id="mains-supply" value="">
+									<label for="mains-supply">Сетевые</label>
+									<a class="btn-filter" href="#">Показать</a>
+								</fieldset>
+							</form>
+						</div>
+						<div class="catalog-right">
+							<div class="sort-by">
+								<div class="catalog-top">
+									<span class="catalog-title" >Сортировка:</span>
+									<a class="sort-active" href="#">По цене</a>
+									<a href="#">По типу</a>
+									<a href="#">По функционалу</a>
+								</div>
+								<div class="arrows">
+									<a class="arrow-up" href="#"></a>
+									<a class="arrow-down" href="#"></a>
+								</div>
 							</div>
-							<div class="arrows">
-								<a class="arrow-up" href="#"></a>
-								<a class="arrow-down" href="#"></a>
+							<div class="catalog">
+								<div class="catalog-item">
+									<img class="item-img" src="img/bfg-3000.jpg" width="127" height="112" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 3000</p>
+										<p>22 500 р.</p>
+									</div>
+									<a class="btn-red" href="#">15 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item">
+									<img class="item-img" src="img/bfg-6000.jpg" width="144" height="128" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 6000</p>
+										<p>30 500 р.</p>
+									</div>
+									<a class="btn-red" href="#">25 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item flag-new no-discount">
+									<img class="item-img" src="img/bfg-2000.jpg" width="127" height="112" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 2000</p>
+									</div>
+									<a class="btn-red" href="#">12 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item">
+									<img class="item-img" src="img/bfg-3000.jpg" width="127" height="112" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 3000</p>
+										<p>22 500 р.</p>
+									</div>
+									<a class="btn-red" href="#">15 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item flag-new no-discount">
+									<img class="item-img" src="img/bfg-6000.jpg" width="144" height="128" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 6000</p>
+									</div>
+									<a class="btn-red" href="#">25 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item">
+									<img class="item-img" src="img/bfg-2000.jpg" width="127" height="112" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 2000</p>
+										<p>32 500 р.</p>
+									</div>
+									<a class="btn-red" href="#">12 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item">
+									<img class="item-img" src="img/bfg-3000.jpg" width="127" height="112" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 3000</p>
+										<p>22 500 р.</p>
+									</div>
+									<a class="btn-red" href="#">15 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item flag-new no-discount">
+									<img class="item-img" src="img/bfg-6000.jpg" width="144" height="128" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 6000</p>
+									</div>
+									<a class="btn-red" href="#">25 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-item">
+									<img class="item-img" src="img/bfg-2000.jpg" width="127" height="112" alt="">
+									<div class="item-title">
+										<p>Перфоратор BOSCH BFG 2000</p>
+										<p>32 500 р.</p>
+									</div>
+									<a class="btn-red" href="#">12 500 р.</a>
+									<div class="buy-item">
+										<a class="btn-green "href="#">Купить</a>
+										<a class="btn-share" href="#">В закладки</a>
+									</div>
+								</div>
+								<div class="catalog-nav">
+									<ul>
+										<li><a class="page-btn current-page" href="#">1</a></li>
+										<li><a class="page-btn" href="#">2</a></li>
+										<li><a class="page-btn" href="#">3</a></li>
+										<li><a class="btn-filter" href="#">Следующая</a></li>
+									</ul>>
+								</div>
 							</div>
 						</div>
-						<div class="catalog">
-							<div class="item">
-								<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
-								<p>Перфоратор BOSCH BFG 3000</p>
-								<p>22 500 р.</p>
-								<a class="btn-red" href="#">15 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item">
-								<img src="img/bfg-6000.jpg" width="144" height="128" alt="">
-								<p>Перфоратор BOSCH BFG 6000</p>
-								<p>30 500 р.</p>
-								<a class="btn-red" href="#">25 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item-new no-discount">
-								<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
-								<p>Перфоратор BOSCH BFG 2000</p>
-								<p>32 500 р.</p>
-								<a class="btn-red" href="#">12 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item">
-								<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
-								<p>Перфоратор BOSCH BFG 3000</p>
-								<p>22 500 р.</p>
-								<a class="btn-red" href="#">15 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item-new no-discount">
-								<img src="img/bfg-6000.jpg" width="144" height="128" alt="">
-								<p>Перфоратор BOSCH BFG 6000</p>
-								<p>30 500 р.</p>
-								<a class="btn-red" href="#">25 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item">
-								<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
-								<p>Перфоратор BOSCH BFG 2000</p>
-								<p>32 500 р.</p>
-								<a class="btn-red" href="#">12 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item">
-								<img src="img/bfg-3000.jpg" width="127" height="112" alt="">
-								<p>Перфоратор BOSCH BFG 3000</p>
-								<p>22 500 р.</p>
-								<a class="btn-red" href="#">15 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item-new no-discount">
-								<img src="img/bfg-6000.jpg" width="144" height="128" alt="">
-								<p>Перфоратор BOSCH BFG 6000</p>
-								<p>30 500 р.</p>
-								<a class="btn-red" href="#">25 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="item">
-								<img src="img/bfg-2000.jpg" width="127" height="112" alt="">
-								<p>Перфоратор BOSCH BFG 2000</p>
-								<p>32 500 р.</p>
-								<a class="btn-red" href="#">12 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-						<div class="catalog-nav">
-							<ul>
-								<li><a class="page-btn current-page" href="#">1</a></li>
-								<li><a class="page-btn" href="#">2</a></li>
-								<li><a class="page-btn" href="#">3</a></li>
-								<li><a class="btn-filter" href="#">Следующая</a></li>
-							</ul>>
-						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-			<div class="catalog-about">
-				<div class="container">
-					<h2>Пара слов об Перфораторах</h2>
-					<p>
-						Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
-						Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор "Трехрежимников": В одно устройстве будут совмещатся отбойный молот и ударная дрель.
-					</p>
-				</div>
-			</div>
-			<footer class="main-footer">
-				<div class="footer-top">
-					<div class="footer-left">
-						<a class="logo" href="#">Техномарт</a>
-						<div class="footer-contacts"> <span>
-							г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
-							+7 (812) 555-05-55
-						</span>
-					</div>
-				</div>
-				<div class="footer-right">
-					<div class="footer-navigation">
-						<ul class="footer-nav">
-							<li><a href="#">Компания</a></li>
-							<li><a href="#">Новости</a></li>
-							<li><a href="#">Каталог</a></li>
-							<li><a href="#">Доставка</a></li>
-							<li><a href="#">Контакты</a></li>
-						</ul>
-						<ul class="footer-nav yellow">
-							<li><a href="#">Материалы</a></li>
-							<li><a href="#">Техника</a></li>
-							<li><a href="#">Инструмент</a></li>
-							<li><a href="#">Спецпредложения</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="footrr-bottom">
-				<div class="footer-left">
+				<div class="catalog-about">
 					<div class="container">
-						<p class="copyright">
-							2010-2016 Компания "Техномарт"<br>
-							Все права защищены
+						<h2>Пара слов об Перфораторах</h2>
+						<p>
+							Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+							Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор "Трехрежимников": В одно устройстве будут совмещатся отбойный молот и ударная дрель.
 						</p>
 					</div>
 				</div>
-				<div class="footer-right">
-					<div class="footer-socials">
-						<div class="social-btns">
-							<a class="vk-btn" href="#">vk</a>
-							<a class="fb-btn" href="#">fb</a>
-							<a class="ig-btn" href="#">ig</a>
+				<footer class="main-footer">
+					<div class="footer-top">
+						<div class="footer-left">
+							<a class="logo" href="#">Техномарт</a>
+							<div class="footer-contacts"> <span>
+								г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
+								+7 (812) 555-05-55
+							</span>
 						</div>
-						<p class="footer-feedback">
-							Обратная связь:<br>
-							<a class="yellow" href="#">mail@htmlacademy.ru</a>
-						</p>
-						<p>Разработано:</p>
-						<a class="yellow" href="https://htmlacademy.ru">HTML Academy></a>
+					</div>
+					<div class="footer-right">
+						<div class="footer-navigation">
+							<ul class="footer-nav">
+								<li><a href="#">Компания</a></li>
+								<li><a href="#">Новости</a></li>
+								<li><a href="#">Каталог</a></li>
+								<li><a href="#">Доставка</a></li>
+								<li><a href="#">Контакты</a></li>
+							</ul>
+							<ul class="footer-nav yellow">
+								<li><a href="#">Материалы</a></li>
+								<li><a href="#">Техника</a></li>
+								<li><a href="#">Инструмент</a></li>
+								<li><a href="#">Спецпредложения</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
-	</body>
-	</html>
+				<div class="footrr-bottom">
+					<div class="footer-left">
+						<div class="container">
+							<p class="copyright">
+								2010-2016 Компания "Техномарт"<br>
+								Все права защищены
+							</p>
+						</div>
+					</div>
+					<div class="footer-right">
+						<div class="footer-socials">
+							<div class="social-btns">
+								<a class="vk-btn" href="#">vk</a>
+								<a class="fb-btn" href="#">fb</a>
+								<a class="ig-btn" href="#">ig</a>
+							</div>
+							<p class="footer-feedback">
+								Обратная связь:<br>
+								<a class="yellow" href="#">mail@htmlacademy.ru</a>
+							</p>
+							<p>Разработано:</p>
+							<a class="yellow" href="https://htmlacademy.ru">HTML Academy></a>
+						</div>
+					</div>
+				</div>
+			</footer>
+		</body>
+		</html>
 
